--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "bootstrap-datepicker": "^1.6.4",
+    "connect-ensure-login": "^0.1.1",
     "express": "^4.14.1",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
-    "socket.io": "^1.7.2"
+    "passport": "^0.3.2",
+    "passport-auth0": "^0.6.0",
+    "socket.io": "^1.7.2",
+    "socketio-jwt": "^4.5.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
