--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "homepage": "https://github.com/kswhyte/real-time#readme",
   "dependencies": {
     "body-parser": "^1.16.0",
+    "es6-promise": "^4.0.5",
     "bootstrap-datepicker": "^1.6.4",
     "connect-ensure-login": "^0.1.1",
     "express": "^4.14.1",
+    "http": "0.0.0",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
