--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   "homepage": "https://github.com/kswhyte/real-time#readme",
   "dependencies": {
     "body-parser": "^1.16.0",
-    "es6-promise": "^4.0.5",
     "bootstrap-datepicker": "^1.6.4",
     "connect-ensure-login": "^0.1.1",
+    "es6-promise": "^4.0.5",
     "express": "^4.14.1",
     "http": "0.0.0",
     "jquery": "^3.1.1",
@@ -33,6 +33,7 @@
     "md5": "^2.2.1",
     "passport": "^0.3.2",
     "passport-auth0": "^0.6.0",
+    "shortid": "^2.2.6",
     "socket.io": "^1.7.2",
     "socketio-jwt": "^4.5.0"
   },
